cambie nuevamente el titulo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <h1>hola</h1>
-    <a href="#">referencia</a>
-    <p> Ever sorto </p>
+    <a href="#">Modificado nuevamente </a>
 </body>
 </html>
